# Solvathon-backend

./: README.md  main.py  pyproject.toml  run.py  serviceAccountKey.json
app/: db.py  hardcorder.py  main.py
app/models/: authentication_model.py  health_care_model.py  student_side_models.py
app/routes/: authentication.py  health_center_routes.py  student_side.py
routes/: authentication.py
template/: prescription.html
