[tool.poetry]
name = "solvathon-backend"
version = "0.1.0"
description = ""
authors = ["Shreyas <shreyas.mohanty03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
firebase-admin = "^6.5.0"
vonage = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
